Quantum v3: Lindblad + von Neumann entropy + H-editor + recording + barycentric; CI/CD + security scaffolding.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         <a href="#" data-view="lucidia">🧠 <span class="label">Lucidia Chat</span></a>
         <a href="#" data-view="metrics">📈 <span class="label">Metrics</span></a>
         <a href="#" data-view="learning">🎯 <span class="label">Learning</span></a>
+        <a href="/apps/quantum/ternary_consciousness_v3.html">⚛️ <span class="label">Ternary Quantum v3</span></a>
       </nav>
     </aside>
 
