--- a/apps/quantum/ternary_consciousness_v3.html
+++ b/apps/quantum/ternary_consciousness_v3.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ternary Quantum Consciousness Framework</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.0/math.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
+      integrity="sha512-j0ZlYF0wxyj8YVZ6Y0Q0d1m+0A3F3q1j6e8k7u5r3qY0wGJZqg0m2tA8m9E7oGxW2yQ6q9lcoYJQ0b3h2Qw8Vg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.0/math.min.js"
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
         * {
             margin: 0;
