--- a/index.html
+++ b/index.html
@@ -513,6 +513,24 @@
                 <span>🎯 Live</span><span>📊 85%</span><span>⏰ now</span>
               </div>
             </article>
+
+            <article class="card" id="clipsCard">
+              <span class="status s-active">New</span>
+              <h3>Generated Clips</h3>
+              <div
+                id="clipList"
+                style="
+                  margin-top: 8px;
+                  display: flex;
+                  flex-direction: column;
+                  gap: 8px;
+                  max-height: 200px;
+                  overflow: auto;
+                "
+              >
+                <p style="color: var(--muted)">Loading…</p>
+              </div>
+            </article>
           </div>
 
           <div class="editor card">
@@ -833,6 +851,29 @@
         renderChat();
       };
       renderChat();
+
+      /* ---------------- Audio clips ---------------- */
+      async function loadClips() {
+        try {
+          const res = await fetch('/api/music/clips', { cache: 'no-cache' });
+          const data = await res.json();
+          const list = $('#clipList');
+          list.innerHTML = '';
+          if (!data.files || !data.files.length) {
+            list.innerHTML = '<p style="color: var(--muted)">No clips yet.</p>';
+            return;
+          }
+          data.files.forEach((f) => {
+            const div = document.createElement('div');
+            div.innerHTML = `<audio controls src="/media/${encodeURIComponent(f)}" style="width:100%"></audio>`;
+            list.appendChild(div);
+          });
+        } catch (err) {
+          console.error(err);
+          $('#clipList').innerHTML = '<p style="color: var(--muted)">Failed to load clips</p>';
+        }
+      }
+      loadClips();
 
       /* ---------------- Search box acts as command palette too ---------------- */
       $('#q').addEventListener('keydown', (e) => {
