Add LRfR submission page and backend test

--- a/var/www/blackroad/requests/index.html
+++ b/var/www/blackroad/requests/index.html
@@ -32,7 +32,7 @@
           <option>done</option>
           <option>archived</option>
         </select>
-        <a class="btn" href="./submit.html">New request</a>
+        <a class="btn" href="./new.html">New request</a>
       </div>
     </header>
 
