chore(blackroad): fix lint config for hello world

--- a/sites/blackroad/index.html
+++ b/sites/blackroad/index.html
@@ -1,20 +1,11 @@
 <!doctype html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>BlackRoad.io — AI-Native Portals</title>
-    <meta
-      name="description"
-      content="BlackRoad.io — AI-native portals for journeys, collaboration, code, and on-chain proofs."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BlackRoad.io — AI-Native Portals</title>
-    <meta name="description" content="BlackRoad.io — AI-native portals for travel, collaboration, and symbolic systems." />
-    <link rel="icon" href="/favicon.ico" />
+    <title>Hello world</title>
   </head>
-  <body class="bg-neutral-950 text-neutral-100">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
