--- a/sites/blackroad/public/portal/roadview/index.html
+++ b/sites/blackroad/public/portal/roadview/index.html
@@ -1,4 +1,61 @@
 <!doctype html>
-
-<title>Roadview | BlackRoad.io</title><style>body{margin:0;background:#0b0b10;color:#e8e8f0;font:14px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}.wrap{max-width:880px;margin:40px auto;padding:24px;border-radius:16px;background:#14141d;box-shadow:0 10px 30px rgba(0,0,0,.35)}</style>
-</head><body><div class="wrap"><h1>Roadview</h1><p>Live journey streams on an interactive globe. Back to <a href="/">home</a>.</p></div></body></html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Roadview | BlackRoad.io</title>
+    <style>
+      :root {
+        color-scheme: dark;
+      }
+      body {
+        margin: 0;
+        background: #0b0b10;
+        color: #e8e8f0;
+        font:
+          14px/1.5 system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Helvetica,
+          Arial,
+          sans-serif;
+      }
+      .wrap {
+        max-width: 880px;
+        margin: 40px auto;
+        padding: 24px;
+        border-radius: 16px;
+        background: #14141d;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
+      }
+      #globe {
+        width: 100%;
+        height: 500px;
+        margin-top: 20px;
+      }
+      a {
+        color: #34d399;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrap">
+      <h1>Roadview</h1>
+      <p>Live journey streams on an interactive globe. Back to <a href="/">home</a>.</p>
+      <div id="globe"></div>
+    </div>
+    <script src="https://unpkg.com/three@0.155.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/globe.gl@3.9.0/dist/globe.gl.min.js"></script>
+    <script>
+      const world = Globe()(document.getElementById('globe'))
+        .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+        .backgroundColor('#0b0b10');
+      world.pointOfView({ lat: 0, lng: 0, altitude: 2.5 });
+    </script>
+  </body>
+</html>
