feat: add bot portal with task stats

--- a/sites/blackroad/public/portal/index.html
+++ b/sites/blackroad/public/portal/index.html
@@ -41,6 +41,7 @@
         { name: "Roadcoin",  desc: "Wallet, staking, and token economy.", href: "/portal/roadcoin" },
         { name: "Roadchain", desc: "On-chain proofs, explorer, and indexer.", href: "/portal/roadchain" },
         { name: "Radius",    desc: "Local meetups and events nearby.", href: "/portal/radius" },
+        { name: "Bot",       desc: "Task states and stats dashboard.", href: "/portal/bot" },
       ];
       const el = document.getElementById('grid');
       el.innerHTML = portals.map(p => `
