--- a/sites/blackroad/index.html
+++ b/sites/blackroad/index.html
@@ -1,12 +1,539 @@
-<!doctype html>
+<!-- FILE: /var/www/blackroad/index.html -->
+
+<!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Hello world</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BlackRoad.io — Technical Co-Creation</title>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    /* ============================
+       BlackRoad.io Brand System
+       ============================ */
+
+
+:root{
+  /* Color System */
+  --bg: #0B1426;              /* Primary background (deep navy) */
+  --text: #FFFFFF;            /* Text primary */
+  --text-2: #94A3B8;          /* Text secondary (light gray-blue) */
+  --blue: #2563EB;            /* Interactive blue */
+  --accent: #06B6D4;          /* Success / accent (cyan) */
+  --grad: linear-gradient(135deg, #FFA500 0%, #FF1493 50%, #4169E1 100%); /* Signature gradient */
+
+  /* Radii */
+  --r-card: 8px;
+  --r-btn: 6px;
+  --r-input: 4px;
+
+  /* Shadow + Layout */
+  --shadow: 0 4px 6px -1px rgba(0,0,0,0.30);
+  --container: 1200px;
+  --gap: 24px;
+
+  /* Spacing Scale (8px grid with specified steps) */
+  --s-1: 4px;
+  --s-2: 8px;
+  --s-3: 12px;
+  --s-4: 16px;
+  --s-5: 24px;
+  --s-6: 32px;
+  --s-7: 48px;
+
+  /* Card surface */
+  --card-bg: rgba(255,255,255,0.05);
+  --card-border: 1px solid rgba(255,255,255,0.10);
+  --track: rgba(255,255,255,0.12);
+}
+
+/* Reset / Base */
+*, *::before, *::after { box-sizing: border-box; }
+html, body { height: 100%; }
+body{
+  margin: 0;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
+  background: var(--bg);
+  color: var(--text);
+  line-height: 1.5; /* Body line height */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+img{ max-width: 100%; display: block; }
+a{ color: inherit; text-decoration: none; }
+.container{ max-width: var(--container); margin: 0 auto; padding: 0 var(--s-6); }
+
+/* Typography */
+h1,h2,h3,h4,h5,h6{
+  line-height: 1.2; /* Headers line height */
+  font-weight: 700; /* Headers 600–700; we choose 700 for clarity */
+  margin: 0 0 var(--s-5);
+}
+p{ margin: 0 0 var(--s-5); color: var(--text-2); font-weight: 400; }
+code, pre, kbd, samp{
+  font-family: 'JetBrains Mono','Fira Code', monospace;
+}
+
+/* Utilities */
+.muted{ color: var(--text-2); }
+.stack-4 > * + * { margin-top: var(--s-4); }
+.stack-5 > * + * { margin-top: var(--s-5); }
+.stack-6 > * + * { margin-top: var(--s-6); }
+.grid{
+  display: grid;
+  gap: var(--gap);
+}
+.grid-3{
+  grid-template-columns: repeat(3, minmax(0,1fr));
+}
+@media (max-width: 960px){
+  .grid-3{ grid-template-columns: 1fr; }
+}
+
+/* Card */
+.card{
+  background: var(--card-bg);
+  border: var(--card-border);
+  border-radius: var(--r-card);
+  box-shadow: var(--shadow);
+  padding: var(--s-6);
+}
+
+/* Buttons */
+.btn{
+  display: inline-flex; align-items: center; justify-content: center;
+  gap: var(--s-2);
+  border-radius: var(--r-btn);
+  padding: var(--s-4) var(--s-6);
+  font-weight: 600;
+  line-height: 1;
+  transition: filter .15s ease, opacity .15s ease, transform .02s ease;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+}
+.btn:active{ transform: translateY(1px); }
+.btn:focus-visible{
+  outline: 2px solid #ffffff;
+  outline-offset: 2px;
+}
+.btn-primary{
+  background: var(--grad);
+  box-shadow: var(--shadow);
+}
+.btn-primary:hover{ opacity: 0.9; }
+.btn-secondary{
+  background: transparent;
+  border: 1px solid var(--blue);
+  color: #fff;
+}
+.btn-secondary:hover{ opacity: 0.85; }
+
+/* Inputs */
+.input{
+  width: 100%;
+  background: #1E293B;
+  color: var(--text);
+  border: 1px solid rgba(255,255,255,0.08);
+  border-radius: var(--r-input);
+  padding: var(--s-4) var(--s-5);
+  transition: box-shadow .15s ease, border-color .15s ease;
+}
+.input::placeholder{ color: #94A3B8; }
+.input:focus{
+  outline: none;
+  border-color: var(--blue);
+  box-shadow: 0 0 0 3px rgba(37,99,235,0.35);
+}
+
+/* Progress */
+.progress{
+  width: 100%;
+  height: 10px;
+  background: var(--track);
+  border-radius: 999px;
+  overflow: hidden;
+}
+.progress-bar{
+  height: 100%;
+  background: var(--grad);
+  width: 60%; /* Example: 60% */
+}
+
+/* Header / Nav */
+header{
+  position: sticky; top: 0; z-index: 10;
+  background: rgba(11,20,38,0.85);
+  backdrop-filter: blur(10px);
+  border-bottom: 1px solid rgba(255,255,255,0.08);
+}
+.nav{
+  display: flex; align-items: center; justify-content: space-between;
+  height: 64px;
+}
+.brand{
+  display: inline-flex; align-items: center; gap: var(--s-3);
+  font-weight: 700;
+  letter-spacing: 0.2px;
+}
+.brand-mark{
+  width: 28px; height: 28px; border-radius: 6px;
+  background: var(--grad);
+  box-shadow: var(--shadow);
+  flex: 0 0 auto;
+}
+.nav-links{
+  display: flex; align-items: center; gap: var(--s-6);
+}
+.nav-links a{
+  color: var(--text-2);
+  font-weight: 600;
+}
+.nav-links a:hover{ color: #fff; }
+
+/* Mobile nav */
+.nav-toggle{ display:none; }
+@media (max-width: 960px){
+  .nav-links{ display:none; }
+  .nav-toggle{ display:inline-flex; }
+  .nav.open .nav-links{
+    display: flex;
+    position: absolute;
+    top: 64px; left: 0; right: 0;
+    flex-direction: column;
+    padding: var(--s-6);
+    gap: var(--s-5);
+    background: rgba(11,20,38,0.98);
+    border-bottom: 1px solid rgba(255,255,255,0.08);
+  }
+}
+
+/* Hero */
+.hero{
+  padding: var(--s-7) 0;
+}
+.hero h1{
+  font-size: clamp(28px, 5vw, 48px);
+  margin-bottom: var(--s-4);
+}
+.hero p{
+  font-size: clamp(16px, 2vw, 18px);
+  max-width: 70ch;
+}
+.cta-row{
+  display: flex; flex-wrap: wrap; gap: var(--s-4);
+  margin-top: var(--s-6);
+}
+
+/* Feature cards */
+.feature{
+  display: flex; align-items: flex-start; gap: var(--s-4);
+}
+.icon{
+  width: 40px; height: 40px; border-radius: 8px;
+  display: inline-grid; place-items: center;
+  background: rgba(255,255,255,0.06);
+  border: 1px solid rgba(255,255,255,0.12);
+  flex: 0 0 auto;
+}
+.icon svg{
+  width: 22px; height: 22px;
+  stroke: #FFFFFF; stroke-width: 1.8; fill: none; stroke-linecap: round; stroke-linejoin: round;
+  opacity: 0.95;
+}
+
+/* Code block */
+pre{
+  margin: 0;
+  background: #0F1A30;
+  border: 1px solid rgba(255,255,255,0.10);
+  border-radius: var(--r-card);
+  padding: var(--s-6);
+  overflow: auto;
+  box-shadow: var(--shadow);
+  color: #E2E8F0;
+}
+
+/* Footer */
+footer{
+  border-top: 1px solid rgba(255,255,255,0.08);
+  margin-top: var(--s-7);
+  padding: var(--s-7) 0;
+  color: var(--text-2);
+}
+.footer-links{
+  display: flex; gap: var(--s-6); flex-wrap: wrap;
+}
+.footer-links a:hover{ color: #fff; }
+
+  </style>
+</head>
+<body>
+  <header>
+    <div class="container nav" id="nav">
+      <a href="#" class="brand" aria-label="BlackRoad.io Home">
+        <span class="brand-mark" aria-hidden="true"></span>
+        <span>BlackRoad<span class="muted">.io</span></span>
+      </a>
+
+
+  <nav class="nav-links" aria-label="Primary">
+    <a href="#features">Features</a>
+    <a href="#docs">Docs</a>
+    <a href="#portal">Portal</a>
+    <a href="#pricing">Pricing</a>
+  </nav>
+
+  <button class="btn btn-secondary nav-toggle" data-nav-toggle aria-expanded="false" aria-controls="mobile-nav">
+    <!-- Outline menu icon -->
+    <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M4 6h16M4 12h16M4 18h16" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linecap="round"/>
+    </svg>
+    Menu
+  </button>
+</div>
+
+  </header>
+
+
+  <main>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <div class="stack-6">
+          <div>
+            <span class="muted" style="display:inline-block; padding: var(--s-2) var(--s-4); border: 1px solid rgba(255,255,255,0.10); border-radius: 999px;">Technical co-creation platform</span>
+          </div>
+          <h1>Build, ship, and evolve — on a <span style="background: var(--grad); -webkit-background-clip: text; background-clip: text; color: transparent;">dark, precise</span> stack.</h1>
+          <p>BlackRoad.io is a developer-focused environment for real-time coding, agents, and automation. Minimal, fast, and designed for clarity with a high-contrast dark UI.</p>
+          <div class="cta-row">
+            <a class="btn btn-primary" href="#portal">Launch Portal</a>
+            <a class="btn btn-secondary" href="#docs">Read the Docs</a>
+          </div>
+
+
+      <!-- Progress demo -->
+      <div class="card">
+        <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom: var(--s-4);">
+          <strong>Environment Setup</strong>
+          <span class="muted">60%</span>
+        </div>
+        <div class="progress" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Features -->
+<section id="features" class="container" aria-labelledby="features-title">
+  <h2 id="features-title">Focused features for builders</h2>
+  <div class="grid grid-3">
+    <article class="card feature">
+      <div class="icon" aria-hidden="true">
+        <!-- server icon (outline) -->
+        <svg viewBox="0 0 24 24">
+          <rect x="3" y="4" width="18" height="6" rx="2"></rect>
+          <rect x="3" y="14" width="18" height="6" rx="2"></rect>
+          <circle cx="8" cy="7" r="1"></circle>
+          <circle cx="8" cy="17" r="1"></circle>
+        </svg>
+      </div>
+      <div>
+        <h3>Agent-Ready Stack</h3>
+        <p>Cards, inputs, and actions styled for clarity. Wire up your agents to a consistent UI without visual noise.</p>
+      </div>
+    </article>
+
+    <article class="card feature">
+      <div class="icon" aria-hidden="true">
+        <!-- shield-check icon (outline) -->
+        <svg viewBox="0 0 24 24">
+          <path d="M12 3l7 4v5c0 5-3.5 8.5-7 9-3.5-.5-7-4-7-9V7l7-4z"></path>
+          <path d="M9.5 12.5l1.8 1.8 3.7-3.7"></path>
+        </svg>
+      </div>
+      <div>
+        <h3>High Contrast &amp; A11y</h3>
+        <p>Meets a minimum 4.5:1 contrast ratio for text, with clear focus styles and predictable hover states.</p>
+      </div>
+    </article>
+
+    <article class="card feature">
+      <div class="icon" aria-hidden="true">
+        <!-- code icon (outline) -->
+        <svg viewBox="0 0 24 24">
+          <path d="M9 18l-6-6 6-6"></path>
+          <path d="M15 6l6 6-6 6"></path>
+        </svg>
+      </div>
+      <div>
+        <h3>Built for Code</h3>
+        <p>Monospace defaults for code surfaces with JetBrains Mono, minimal chrome, and clean spacing.</p>
+      </div>
+    </article>
+  </div>
+</section>
+
+<!-- Code sample -->
+<section id="docs" class="container" style="margin-top: var(--s-7);">
+  <div class="grid" style="grid-template-columns: 1.1fr 0.9fr; gap: var(--gap);">
+    <div class="card">
+      <h2>API Quickstart</h2>
+      <p>Minimal example of a client call. Replace the endpoint with your deployment.</p>
+      <pre><code>// client.js
+
+import fetch from 'node-fetch';
+
+async function chat(prompt){
+  const res = await fetch('https://blackroad.io/api/llm/chat', {
+    method: 'POST',
+    headers: {'content-type':'application/json'},
+    body: JSON.stringify({ prompt })
+  });
+  if(!res.ok) throw new Error('Request failed: ' + res.status);
+  return res.json();
+}
+
+chat("Hello, BlackRoad").then(console.log).catch(console.error);
+</code></pre>
+    </div>
+
+    <div class="card">
+      <h2>Join the Beta</h2>
+      <p>Request access to the co-coding portal. We’ll reach out with credentials.</p>
+      <form class="stack-4" action="#" method="post" onsubmit="event.preventDefault(); alert('Request received.');">
+        <label>
+          <span class="muted" style="display:block; margin-bottom: var(--s-2);">Email</span>
+          <input type="email" required class="input" placeholder="you@company.com" />
+        </label>
+        <label>
+          <span class="muted" style="display:block; margin-bottom: var(--s-2);">Use case</span>
+          <input type="text" class="input" placeholder="Agents, tutoring, research..." />
+        </label>
+        <div style="display:flex; gap: var(--s-4);">
+          <button class="btn btn-primary" type="submit">Request Access</button>
+          <button class="btn btn-secondary" type="button" onclick="window.location.hash='#portal'">View Portal</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+
+<!-- Portal teaser -->
+<section id="portal" class="container" style="margin-top: var(--s-7);">
+  <div class="card">
+    <div class="grid" style="grid-template-columns: 1fr 1fr;">
+      <div class="stack-5" style="padding-right: var(--s-6);">
+        <h2>Portal Preview</h2>
+        <p>Structured cards, gradient primaries, outlined icons, and focused inputs — all tuned to the BlackRoad look.</p>
+
+        <div class="grid" style="grid-template-columns: repeat(2, minmax(0,1fr)); gap: var(--gap);">
+          <div class="card">
+            <div class="muted" style="margin-bottom: var(--s-3);">Status</div>
+            <div style="display:flex; align-items:center; gap: var(--s-3);">
+              <span style="width:10px;height:10px;border-radius:999px;background: var(--accent); box-shadow: 0 0 0 4px rgba(6,182,212,0.18);"></span>
+              <strong>Online</strong>
+            </div>
+          </div>
+          <div class="card">
+            <div class="muted" style="margin-bottom: var(--s-3);">Queue</div>
+            <strong>3 builds</strong>
+            <div style="margin-top: var(--s-3);" class="progress"><div class="progress-bar" style="width:40%"></div></div>
+          </div>
+          <div class="card" style="grid-column: 1 / -1;">
+            <div style="display:flex; align-items:center; justify-content:space-between;">
+              <strong>Actions</strong>
+              <div style="display:flex; gap: var(--s-3);">
+                <button class="btn btn-secondary" type="button">Plan</button>
+                <button class="btn btn-primary" type="button">Run</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right: code/editor mock -->
+      <div style="display:flex; flex-direction:column; gap: var(--s-4);">
+        <div class="muted">editor.ts</div>
+        <pre><code>export function greet(name: string){
+  return `Welcome to BlackRoad, ${name}!`;
+}
+</code></pre>
+        <div style="display:flex; gap: var(--s-4);">
+          <button class="btn btn-primary">Save</button>
+          <button class="btn btn-secondary">Revert</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Pricing / CTA -->
+<section id="pricing" class="container" style="margin-top: var(--s-7);">
+  <h2>Simple, transparent options</h2>
+  <div class="grid grid-3">
+    <div class="card stack-5">
+      <div class="muted">Starter</div>
+      <h3>$0</h3>
+      <p>Core UI kit, docs, and local workflows.</p>
+      <button class="btn btn-secondary" type="button">Get Started</button>
+    </div>
+    <div class="card stack-5" style="border: 1px solid rgba(255,255,255,0.18);">
+      <div class="muted">Pro</div>
+      <h3>$29<span class="muted" style="font-weight:400;">/mo</span></h3>
+      <p>Portal, agents, and automation routes.</p>
+      <button class="btn btn-primary" type="button">Upgrade</button>
+    </div>
+    <div class="card stack-5">
+      <div class="muted">Enterprise</div>
+      <h3>Contact</h3>
+      <p>Custom deployments and advanced controls.</p>
+      <button class="btn btn-secondary" type="button">Talk to us</button>
+    </div>
+  </div>
+</section>
+
+  </main>
+
+
+  <footer>
+    <div class="container">
+      <div class="stack-5">
+        <div class="footer-links">
+          <a href="#features">Features</a>
+          <a href="#docs">Docs</a>
+          <a href="#portal">Portal</a>
+          <a href="#pricing">Pricing</a>
+          <a href="#">Status</a>
+        </div>
+        <div class="muted">© <span id="year"></span> BlackRoad.io. All rights reserved.</div>
+      </div>
+    </div>
+  </footer>
+
+
+  <script>
+    // Mobile nav toggle
+    (function(){
+      const nav = document.getElementById('nav');
+      const toggle = document.querySelector('[data-nav-toggle]');
+      if(toggle){
+        toggle.addEventListener('click', function(){
+          const open = nav.classList.toggle('open');
+          toggle.setAttribute('aria-expanded', String(open));
+        });
+      }
+      // Year
+      document.getElementById('year').textContent = new Date().getFullYear();
+    }());
+  </script>
+
+
+</body>
 </html>
