feat(site): advertise all portals on homepage

--- a/sites/blackroad/index.html
+++ b/sites/blackroad/index.html
@@ -474,6 +474,29 @@ chat("Hello, BlackRoad").then(console.log).catch(console.error);
   </div>
 </section>
 
+<!-- Portals advertising -->
+<section id="portals" class="container" style="margin-top: var(--s-7);">
+  <h2>Portals</h2>
+  <div class="grid grid-3">
+    <a class="card" href="/portal.html">
+      <strong>Portal</strong>
+      <p class="muted">Co-coding environment.</p>
+    </a>
+    <a class="card" href="/droplet.html">
+      <strong>Droplet</strong>
+      <p class="muted">Droplet information.</p>
+    </a>
+    <a class="card" href="/status.html">
+      <strong>Status</strong>
+      <p class="muted">Platform health checks.</p>
+    </a>
+    <a class="card" href="/about.html">
+      <strong>About</strong>
+      <p class="muted">Learn about BlackRoad.io.</p>
+    </a>
+  </div>
+</section>
+
 <!-- Pricing / CTA -->
 <section id="pricing" class="container" style="margin-top: var(--s-7);">
   <h2>Simple, transparent options</h2>
@@ -508,9 +531,11 @@ chat("Hello, BlackRoad").then(console.log).catch(console.error);
         <div class="footer-links">
           <a href="#features">Features</a>
           <a href="#docs">Docs</a>
-          <a href="#portal">Portal</a>
+          <a href="/portal.html">Portal</a>
+          <a href="/droplet.html">Droplet</a>
+          <a href="/status.html">Status</a>
+          <a href="/about.html">About</a>
           <a href="#pricing">Pricing</a>
-          <a href="#">Status</a>
         </div>
         <div class="muted">© <span id="year"></span> BlackRoad.io. All rights reserved.</div>
       </div>
