feat: display hello world message

--- a/sites/blackroad/index.html
+++ b/sites/blackroad/index.html
@@ -305,6 +305,7 @@ footer{
     <section class="hero">
       <div class="container">
         <div class="stack-6">
+          <p>Hello, World!</p>
           <div>
             <span class="muted" style="display:inline-block; padding: var(--s-2) var(--s-4); border: 1px solid rgba(255,255,255,0.10); border-radius: 999px;">Technical co-creation platform</span>
           </div>
