--- a/srv/blackroad/web/index.html
+++ b/srv/blackroad/web/index.html
@@ -6,10 +6,10 @@
   <title>BlackRoad.io</title>
   <meta name="color-scheme" content="dark"/>
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%2318253a'/%3E%3Cpath d='M16 40C24 20 40 20 48 40' stroke='%23ff4fd8' stroke-width='6' fill='none'/%3E%3C/svg%3E"/>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script crossorigin src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
-  <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="./vendor/react.production.min.js"></script>
+  <script src="./vendor/react-dom.production.min.js"></script>
+  <script src="./vendor/styled-components.min.js"></script>
+  <script src="./vendor/babel.min.js"></script>
   <style>
     :root{
       --bg:#0b1220; --panel:#0f172a; --subpanel:#0b1324;
