--- a/var/www/blackroad/devices.html
+++ b/var/www/blackroad/devices.html
@@ -1,3 +1,4 @@
+<!-- FILE: /var/www/blackroad/devices.html -->
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
