fix chat stream endpoint

--- a/var/www/blackroad/llm-chat.html
+++ b/var/www/blackroad/llm-chat.html
@@ -72,8 +72,10 @@ async function send(){
   const stream=document.getElementById('streamToggle').checked;
   const body={messages:[{role:'user',content:text}]};
   if(stream){
+    const streamBody={...body,stream:true};
     try{
-      const res=await fetch('/api/llm/stream',{method:'POST',headers:{'content-type':'application/json'},body:JSON.stringify(body)});
+      const res=await fetch('/api/llm/chat',{method:'POST',headers:{'content-type':'application/json'},body:JSON.stringify(streamBody)});
+      if(!res.ok) return fallback(body,text);
       const reader=res.body.getReader();
       const decoder=new TextDecoder();
       let buf='';
