chore: restore uptime monitor marker

--- a/blackroad-landing/index.html
+++ b/blackroad-landing/index.html
@@ -69,6 +69,7 @@
     </style>
   </head>
   <body>
+    <!-- BLACKROAD OK: Required for uptime monitoring. -->
     <!-- Brand landing page for BlackRoad -->
     <header>
       <h1 class="hero-title">BlackRoad</h1>
